<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- not translated -->

    <string name="app_name">Timeriffic</string>

    <!-- menu -->

    <string name="settings">Settings</string>
    <string name="check_now">Check Now</string>
    <string name="about">About</string>

    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>

    <string name="insert_action">Insert New Action</string>
    <string name="insert_profile">Insert New Profile</string>
    <string name="append_profile">Add New Profile</string>
    <string name="reset">Reset</string>

    <!-- prefs -->

    <string name="prefs_title">Timeriffic - Preferences</string>

    <string name="prefs_enable_label">Enable Timeriffic</string>
    <string name="prefs_enable_on">Timeriffic is enabled.</string>
    <string name="prefs_enable_off">Timeriffic is disabled.</string>

    <string name="prefs_dismiss_intro_label">Don\'t display introduction</string>
    <string name="prefs_dismiss_intro_on">Introduction is skipped.</string>
    <string name="prefs_dismiss_intro_off">Introduction is visible.</string>

    <!-- intro -->

    <string name="intro_title">Timeriffic %s - Introduction</string>
    <string name="intro_button_continue">Continue</string>
    <string name="intro_checkbox_dont_display_again">Don\'t display again</string>

    <!-- profile screen -->

    <string name="profiles_empty_help">Use the MENU key to add a new profile.</string>

    <string name="profiles_timeriffictoggle_disabled">Timeriffic Disabled</string>
    <string name="profiles_timeriffictoggle_enabled">Timeriffic Enabled</string>

    <string name="timedactioncontextmenu_title">Timed Action</string>

    <string name="profilecontextmenu_title">Profile</string>

    <string name="insertprofile_new_profile_title">New Profile</string>

    <string name="deleteprofile_title">Delete profile</string>
    <string name="deleteprofile_msgbody">Are you sure you want to delete profile \'%s\' and all its actions?</string>
    <string name="deleteprofile_button_delete">Delete</string>
    <string name="deleteprofile_button_cancel">Cancel</string>

    <string name="deleteaction_title">Delete action</string>
    <string name="deleteaction_msgbody">Are you sure you want to delete action \'%s\'?</string>
    <string name="deleteaction_button_delete">Delete</string>
    <string name="deleteaction_button_cancel">Cancel</string>

    <string name="resetprofiles_msg_confirm_delete">Delete and Reset <u>all Profiles</u>? <b>No undo!</b></string>
    <string name="resetprofiles_button_cancel">Cancel</string>

    <!-- summary of timed actions on profile list screen -->

    <!-- special case when there's no action to execute (the action won't run) -->
    <string name="timedaction_no_action">No action</string>
    <!-- special case when no days are selected (so the action won't run) -->
    <string name="timedaction_nodays_never">Never</string>

    <!-- Timed action hour/time display using String.format, see the
         Date and Time section at
           http://java.sun.com/j2se/1.5.0/docs/api/java/util/Formatter.html
         Summary:
           tk=hour 0-23, tl=hour 1-12, tp=am/om, tM=minutes 00-59
     -->
    <!-- display time on exact hour -->
    <string name="timedaction_time_0_minute">%1$tk:%1$tM</string>
    <!-- display time: hour with minutes != 0 -->
    <string name="timedaction_time_with_minutes">%1$tk:%1$tM</string>

    <string name="timedaction_airplane_on">Airplane on</string>
    <string name="timedaction_airplane_off">Airplane off</string>
    <string name="timedaction_wifi_on">Wifi on</string>
    <string name="timedaction_wifi_off">Wifi off</string>
    <string name="timedaction_ringer_int">Ringer %d%%</string>
    <string name="timedaction_brightness_int">Brightness %d%%</string>

    <!-- edit profile screen -->

    <string name="editprofile_title">Edit Profile</string>
    <string name="editprofile_profile_name">Profile Name:</string>
    <string name="editprofile_profile_hint">Profile Name</string>
    <string name="editprofile_checkbox_enabled">Enabled</string>
    <string name="editprofile_button_accept">Accept</string>

    <!-- edit action screen -->

    <string name="editaction_title">Edit Timed Action</string>

    <string name="editaction_section_action">Action</string>
    <string name="editaction_section_trigger_time">Trigger Time</string>
    <string name="editaction_section_days">Days</string>

    <string name="editaction_ringer">Ringer</string>
    <string name="editaction_vibrate">Vibrate</string>
    <string name="editaction_volume">Volume</string>
    <string name="editaction_brightness">Brightness</string>
    <string name="editaction_wifi">Wifi</string>
    <string name="editaction_airplane">Airplane Mode</string>

    <!-- percent dialog -->

    <string name="percent_do_not_change">Do not change.</string>
    <string name="percent_change_to">Change to following value:</string>
    <string name="percent_button_unchanged">Unchanged</string>
    <string name="percent_button_accept">Accept</string>

    <!-- enum dialog -->

    <string name="enum_unchanged">Unchanged</string>

    <!-- toggle on/off dialog -->

    <string name="toggle_turn_on">Turn on</string>
    <string name="toggle_turn_off">Turn off</string>

    <!-- toast to display next change time -->

    <string name="toast_next_change_at_datetime">Next Change: %s</string>
    <!-- toast_next_alarm_date_time uses Java SimpleDateFormat, see
         http://java.sun.com/j2se/1.5.0/docs/api/java/text/SimpleDateFormat.html
    -->
    <string name="toast_next_alarm_date_time">yyyy/MM/dd HH:mm:ss</string>

    <!-- settings -->

    <string name="ringermode_ring">Ring</string>
    <string name="ringermode_mute">Mute</string>

    <string name="vibrateringermode_vibrate">Vibrate</string>
    <string name="vibrateringermode_no_vibrate">No vibrate</string>

</resources>
