<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_serv"
        android:title="@string/prefs_enable_label"
        android:summaryOff="@string/prefs_enable_off"
        android:summaryOn="@string/prefs_enable_on" />

    <CheckBoxPreference
        android:key="dismiss_intro"
        android:defaultValue="false"
        android:title="@string/prefs_dismiss_intro_label"
        android:summaryOff="@string/prefs_dismiss_intro_off"
        android:summaryOn="@string/prefs_dismiss_intro_on" />

    <CheckBoxPreference
        android:key="check_service"
        android:defaultValue="true"
        android:title="Validate Audio Service"
        android:summaryOff="Do not validate audio service is present."
        android:summaryOn="Validate audio service is present." />

</PreferenceScreen>
