<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <ToggleButton
            android:id="@+id/global_toggle"
            android:textOff="@string/profiles_timeriffictoggle_disabled"
            android:textOn="@string/profiles_timeriffictoggle_enabled"
            android:layout_width="wrap_content"
            android:layout_height="62dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            />

        <ImageView
            android:id="@+id/icon"
            android:src="@drawable/timeriffic_icon"
            android:layout_width="40dip"
            android:layout_height="60dip"
            android:scaleType="fitCenter"
            />

        <Button
        	android:id="@+id/check_now"
        	android:text="@string/check_now"
            android:layout_width="wrap_content"
            android:layout_height="64dip"
        	android:drawableLeft="@drawable/ic_menu_rotate"
        	/>

    </LinearLayout>

<com.alfray.timeriffic.profiles.GlobalStatusView
    android:id="@+id/global_status"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/globalstatus_bg_gradient"
    android:layout_weight="0"
    />

<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    >

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profilesList"
        android:orientation="vertical"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/empty"
        android:gravity="center_horizontal"
        android:text="@string/profiles_empty_help"
        />

</FrameLayout>
</LinearLayout>
